--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@types/google-apps-script": "^1.0.97"
+    "@types/google-apps-script": "^1.0.97",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
